k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-deploy
  namespace: website
spec:
  type: ClusterIP
  selector:
    app: website-deploy
  ports:
    - name: http
      port: 80
      targetPort: 3000
